# parse-serde-macro

./: Cargo.toml  README.md
_impl/: Cargo.toml
_impl/src/: lib.rs
src/: main.rs
