[package]
name = "parse-serde-macro"
version = "0.1.0"
edition = "2021"
publish = ["ktra"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_impl = {path="_impl"}
serde = { version = "*", features = ["derive"] }

[workspace]
members = ["_impl"]
